--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "electron-json-storage": "^4.6.0",
     "electron-squirrel-startup": "^1.0.0",
     "puppeteer": "^19.3.0",
-    "puppeteer-autoscroll-down": "^1.1.1"
+    "puppeteer-autoscroll-down": "^1.1.1",
+    "spin.js": "^4.1.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.3",
