--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   },
   "keywords": [],
   "author": {
-    "name": "kazu12222",
-    "email": "nokaha1222@gmail.com"
+    "name": "toshiaki_n",
+    "email": "nh.toshiaki@gmail.com"
   },
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "electron-db": "^0.15.7",
     "electron-json-storage": "^4.6.0",
     "electron-reload": "^2.0.0-alpha.1",
     "electron-squirrel-startup": "^1.0.0",
+    "moment": "^2.29.4",
     "puppeteer": "^19.3.0",
     "puppeteer-autoscroll-down": "^1.1.1",
     "spin.js": "^4.1.1"
@@ -32,6 +34,6 @@
     "@electron-forge/maker-rpm": "^6.0.3",
     "@electron-forge/maker-squirrel": "^6.0.3",
     "@electron-forge/maker-zip": "^6.0.3",
-    "electron": "21.3.1"
+    "electron": "^23.1.2"
   }
 }
